ai fixes to make the app run with JDK 13