@@ -5,7 +5,6 @@ buildscript {
     }
     repositories {
         mavenCentral()
-        jcenter()
         gradlePluginPortal()
     }
     dependencies {
@@ -21,6 +20,11 @@ buildscript {
 apply plugin: "io.ratpack.ratpack-groovy"
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: "asset-pipeline"
+
+// Ratpack 1.2's epoll transport relies on Unsafe APIs removed from recent JDKs.
+run {
+    jvmArgs '-Dratpack.epoll.disable=true', '--add-opens=java.base/java.lang=ALL-UNNAMED'
+}
 
 // The “ratpack” plugin is IDEA aware.
 // It will create a run configuration in IDEA to launch your app in your IDE, with hot reloading.
@@ -54,6 +58,7 @@ dependencies {
     // Default SLF4J binding. Note that this is a blocking implementation.
     // See here for a non blocking appender http://logging.apache.org/log4j/2.x/manual/async.html
     runtime 'org.slf4j:slf4j-simple:1.7.7'
+    compile 'com.sun.activation:javax.activation:1.2.0'
     compile "org.jenkins-ci.plugins:job-dsl-core:${jobDslVersion}"
 
     compile "com.bertramlabs.plugins:ratpack-asset-pipeline:${assetPipelineVersion}"
